Package_Tools/include-C/alt/tcl8.6/tclDecls.pp

function Tcl_GetNamespaceUnknownHandler(interp:PTcl_Interp; nsPtr:PTcl_Namespace):PTcl_Obj;cdecl;external;
{ 568  }
function Tcl_SetNamespaceUnknownHandler(interp:PTcl_Interp; nsPtr:PTcl_Namespace; handlerPtr:PTcl_Obj):longint;cdecl;external;
{ 569  }
function Tcl_GetEncodingFromObj(interp:PTcl_Interp; objPtr:PTcl_Obj; encodingPtr:PTcl_Encoding):longint;cdecl;external;
{ 570  }
function Tcl_GetEncodingSearchPath:PTcl_Obj;cdecl;external;
{ 571  }
function Tcl_SetEncodingSearchPath(searchPath:PTcl_Obj):longint;cdecl;external;
{ 572  }
(* Const before type ignored *)
function Tcl_GetEncodingNameFromEnvironment(bufPtr:PTcl_DString):Pchar;cdecl;external;
{ 573  }
(* Const before type ignored *)
(* Const before declarator ignored *)
function Tcl_PkgRequireProc(interp:PTcl_Interp; name:Pchar; objc:longint; objv:PPTcl_Obj; clientDataPtr:pointer):longint;cdecl;external;
{ 574  }
procedure Tcl_AppendObjToErrorInfo(interp:PTcl_Interp; objPtr:PTcl_Obj);cdecl;external;
{ 575  }
(* Const before type ignored *)
(* Const before type ignored *)
procedure Tcl_AppendLimitedToObj(objPtr:PTcl_Obj; bytes:Pchar; length:longint; limit:longint; ellipsis:Pchar);cdecl;external;
{ 576  }
(* Const before type ignored *)
(* Const before declarator ignored *)
function Tcl_Format(interp:PTcl_Interp; format:Pchar; objc:longint; objv:PPTcl_Obj):PTcl_Obj;cdecl;external;
{ 577  }
(* Const before type ignored *)
(* Const before declarator ignored *)
function Tcl_AppendFormatToObj(interp:PTcl_Interp; objPtr:PTcl_Obj; format:Pchar; objc:longint; objv:PPTcl_Obj):longint;cdecl;external;
{ 578  }
(* Const before type ignored *)
function Tcl_ObjPrintf(format:Pchar; args:array of const):PTcl_Obj;cdecl;external;
function Tcl_ObjPrintf(format:Pchar):PTcl_Obj;cdecl;external;
{ 579  }
(* Const before type ignored *)
procedure Tcl_AppendPrintfToObj(objPtr:PTcl_Obj; format:Pchar; args:array of const);cdecl;external;
procedure Tcl_AppendPrintfToObj(objPtr:PTcl_Obj; format:Pchar);cdecl;external;
{ 580  }
function Tcl_CancelEval(interp:PTcl_Interp; resultObjPtr:PTcl_Obj; clientData:TClientData; flags:longint):longint;cdecl;external;
{ 581  }
function Tcl_Canceled(interp:PTcl_Interp; flags:longint):longint;cdecl;external;
{ 582  }
function Tcl_CreatePipe(interp:PTcl_Interp; rchan:PTcl_Channel; wchan:PTcl_Channel; flags:longint):longint;cdecl;external;
{ 583  }
(* Const before type ignored *)
function Tcl_NRCreateCommand(interp:PTcl_Interp; cmdName:Pchar; proc:PTcl_ObjCmdProc; nreProc:PTcl_ObjCmdProc; clientData:TClientData; 
           deleteProc:PTcl_CmdDeleteProc):TTcl_Command;cdecl;external;
{ 584  }
function Tcl_NREvalObj(interp:PTcl_Interp; objPtr:PTcl_Obj; flags:longint):longint;cdecl;external;
{ 585  }
(* Const before declarator ignored *)
function Tcl_NREvalObjv(interp:PTcl_Interp; objc:longint; objv:PPTcl_Obj; flags:longint):longint;cdecl;external;
{ 586  }
(* Const before declarator ignored *)
function Tcl_NRCmdSwap(interp:PTcl_Interp; cmd:TTcl_Command; objc:longint; objv:PPTcl_Obj; flags:longint):longint;cdecl;external;
{ 587  }
procedure Tcl_NRAddCallback(interp:PTcl_Interp; postProcPtr:PTcl_NRPostProc; data0:TClientData; data1:TClientData; data2:TClientData; 
            data3:TClientData);cdecl;external;
{ 588  }
(* Const before declarator ignored *)
function Tcl_NRCallObjProc(interp:PTcl_Interp; objProc:PTcl_ObjCmdProc; clientData:TClientData; objc:longint; objv:PPTcl_Obj):longint;cdecl;external;
{ 589  }
(* Const before type ignored *)
function Tcl_GetFSDeviceFromStat(statPtr:PTcl_StatBuf):dword;cdecl;external;
{ 590  }
(* Const before type ignored *)
function Tcl_GetFSInodeFromStat(statPtr:PTcl_StatBuf):dword;cdecl;external;
{ 591  }
(* Const before type ignored *)
function Tcl_GetModeFromStat(statPtr:PTcl_StatBuf):dword;cdecl;external;
{ 592  }
(* Const before type ignored *)
function Tcl_GetLinkCountFromStat(statPtr:PTcl_StatBuf):longint;cdecl;external;
{ 593  }
(* Const before type ignored *)
function Tcl_GetUserIdFromStat(statPtr:PTcl_StatBuf):longint;cdecl;external;
{ 594  }
(* Const before type ignored *)
function Tcl_GetGroupIdFromStat(statPtr:PTcl_StatBuf):longint;cdecl;external;
{ 595  }
(* Const before type ignored *)
function Tcl_GetDeviceTypeFromStat(statPtr:PTcl_StatBuf):longint;cdecl;external;
{ 596  }
(* Const before type ignored *)
function Tcl_GetAccessTimeFromStat(statPtr:PTcl_StatBuf):TTcl_WideInt;cdecl;external;
{ 597  }
(* Const before type ignored *)
function Tcl_GetModificationTimeFromStat(statPtr:PTcl_StatBuf):TTcl_WideInt;cdecl;external;
{ 598  }
(* Const before type ignored *)
function Tcl_GetChangeTimeFromStat(statPtr:PTcl_StatBuf):TTcl_WideInt;cdecl;external;
{ 599  }
(* Const before type ignored *)
function Tcl_GetSizeFromStat(statPtr:PTcl_StatBuf):TTcl_WideUInt;cdecl;external;
{ 600  }
(* Const before type ignored *)
function Tcl_GetBlocksFromStat(statPtr:PTcl_StatBuf):TTcl_WideUInt;cdecl;external;
{ 601  }
(* Const before type ignored *)
function Tcl_GetBlockSizeFromStat(statPtr:PTcl_StatBuf):dword;cdecl;external;
{ 602  }
function Tcl_SetEnsembleParameterList(interp:PTcl_Interp; token:TTcl_Command; paramList:PTcl_Obj):longint;cdecl;external;
{ 603  }
function Tcl_GetEnsembleParameterList(interp:PTcl_Interp; token:TTcl_Command; paramListPtr:PPTcl_Obj):longint;cdecl;external;
{ 604  }
(* Const before type ignored *)
(* Const before declarator ignored *)
function Tcl_ParseArgsObjv(interp:PTcl_Interp; argTable:PTcl_ArgvInfo; objcPtr:Plongint; objv:PPTcl_Obj; remObjv:PPPTcl_Obj):longint;cdecl;external;
{ 605  }
function Tcl_GetErrorLine(interp:PTcl_Interp):longint;cdecl;external;
{ 606  }
procedure Tcl_SetErrorLine(interp:PTcl_Interp; lineNum:longint);cdecl;external;
{ 607  }
procedure Tcl_TransferResult(sourceInterp:PTcl_Interp; code:longint; targetInterp:PTcl_Interp);cdecl;external;
{ 608  }
function Tcl_InterpActive(interp:PTcl_Interp):longint;cdecl;external;
{ 609  }
procedure Tcl_BackgroundException(interp:PTcl_Interp; code:longint);cdecl;external;
{ 610  }
function Tcl_ZlibDeflate(interp:PTcl_Interp; format:longint; data:PTcl_Obj; level:longint; gzipHeaderDictObj:PTcl_Obj):longint;cdecl;external;
{ 611  }
function Tcl_ZlibInflate(interp:PTcl_Interp; format:longint; data:PTcl_Obj; buffersize:longint; gzipHeaderDictObj:PTcl_Obj):longint;cdecl;external;
{ 612  }
(* Const before type ignored *)
function Tcl_ZlibCRC32(crc:dword; buf:Pbyte; len:longint):dword;cdecl;external;
{ 613  }
(* Const before type ignored *)
function Tcl_ZlibAdler32(adler:dword; buf:Pbyte; len:longint):dword;cdecl;external;
{ 614  }
function Tcl_ZlibStreamInit(interp:PTcl_Interp; mode:longint; format:longint; level:longint; dictObj:PTcl_Obj; 
           zshandle:PTcl_ZlibStream):longint;cdecl;external;
{ 615  }
function Tcl_ZlibStreamGetCommandName(zshandle:TTcl_ZlibStream):PTcl_Obj;cdecl;external;
{ 616  }
function Tcl_ZlibStreamEof(zshandle:TTcl_ZlibStream):longint;cdecl;external;
{ 617  }
function Tcl_ZlibStreamChecksum(zshandle:TTcl_ZlibStream):longint;cdecl;external;
{ 618  }
function Tcl_ZlibStreamPut(zshandle:TTcl_ZlibStream; data:PTcl_Obj; flush:longint):longint;cdecl;external;
{ 619  }
function Tcl_ZlibStreamGet(zshandle:TTcl_ZlibStream; data:PTcl_Obj; count:longint):longint;cdecl;external;
{ 620  }
function Tcl_ZlibStreamClose(zshandle:TTcl_ZlibStream):longint;cdecl;external;
{ 621  }
function Tcl_ZlibStreamReset(zshandle:TTcl_ZlibStream):longint;cdecl;external;
{ 622  }
(* Const before type ignored *)
procedure Tcl_SetStartupScript(path:PTcl_Obj; encoding:Pchar);cdecl;external;
{ 623  }
(* Const before type ignored *)
function Tcl_GetStartupScript(encodingPtr:PPchar):PTcl_Obj;cdecl;external;
{ 624  }
function Tcl_CloseEx(interp:PTcl_Interp; chan:TTcl_Channel; flags:longint):longint;cdecl;external;
{ 625  }
function Tcl_NRExprObj(interp:PTcl_Interp; objPtr:PTcl_Obj; resultPtr:PTcl_Obj):longint;cdecl;external;
{ 626  }
function Tcl_NRSubstObj(interp:PTcl_Interp; objPtr:PTcl_Obj; flags:longint):longint;cdecl;external;
{ 627  }
(* Const before type ignored *)
(* Const before declarator ignored *)
function Tcl_LoadFile(interp:PTcl_Interp; pathPtr:PTcl_Obj; symv:PPchar; flags:longint; procPtrs:pointer; 
           handlePtr:PTcl_LoadHandle):longint;cdecl;external;
{ 628  }
(* Const before type ignored *)
function Tcl_FindSymbol(interp:PTcl_Interp; handle:TTcl_LoadHandle; symbol:Pchar):pointer;cdecl;external;
{ 629  }
function Tcl_FSUnloadFile(interp:PTcl_Interp; handlePtr:TTcl_LoadHandle):longint;cdecl;external;
{ 630  }
procedure Tcl_ZlibStreamSetCompressionDictionary(zhandle:TTcl_ZlibStream; compressionDictionaryObj:PTcl_Obj);cdecl;external;
{ Slot 631 is reserved  }
{ Slot 632 is reserved  }
{ Slot 633 is reserved  }
{ Slot 634 is reserved  }
{ Slot 635 is reserved  }
{ Slot 636 is reserved  }
{ Slot 637 is reserved  }
{ Slot 638 is reserved  }
{ Slot 639 is reserved  }
{ Slot 640 is reserved  }
{ Slot 641 is reserved  }
{ Slot 642 is reserved  }
{ Slot 643 is reserved  }
{ Slot 644 is reserved  }
{ Slot 645 is reserved  }
{ Slot 646 is reserved  }
{ Slot 647 is reserved  }
{ Slot 648 is reserved  }
{ Slot 649 is reserved  }
{ Slot 650 is reserved  }
{ Slot 651 is reserved  }
{ Slot 652 is reserved  }
{ Slot 653 is reserved  }
{ Slot 654 is reserved  }
{ Slot 655 is reserved  }
{ Slot 656 is reserved  }
{ Slot 657 is reserved  }
{ Slot 658 is reserved  }
{ Slot 659 is reserved  }
{ Slot 660 is reserved  }
{ Slot 661 is reserved  }
{ Slot 662 is reserved  }
{ Slot 663 is reserved  }
{ Slot 664 is reserved  }
{ Slot 665 is reserved  }
{ Slot 666 is reserved  }
{ Slot 667 is reserved  }
{ Slot 668 is reserved  }
{ Slot 669 is reserved  }
{ Slot 670 is reserved  }
{ Slot 671 is reserved  }
{ Slot 672 is reserved  }
{ Slot 673 is reserved  }
{ Slot 674 is reserved  }
{ Slot 675 is reserved  }
{ Slot 676 is reserved  }
{ Slot 677 is reserved  }
{ Slot 678 is reserved  }
{ Slot 679 is reserved  }
{ Slot 680 is reserved  }
{ Slot 681 is reserved  }
{ Slot 682 is reserved  }
{ Slot 683 is reserved  }
{ Slot 684 is reserved  }
{ Slot 685 is reserved  }
{ Slot 686 is reserved  }
{ Slot 687 is reserved  }
{ 688  }
procedure TclUnusedStubEntry;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
type
  PTclStubHooks = ^TTclStubHooks;
  TTclStubHooks = record
      tclPlatStubs : PTclPlatStubs;
      tclIntStubs : PTclIntStubs;
      tclIntPlatStubs : PTclIntPlatStubs;
    end;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
{ 0  }
(* Const before type ignored *)
(* Const before type ignored *)
{ 1  }
(* Const before type ignored *)
{ 2  }
{ 3  }
{ 4  }
{ 5  }
(* Const before type ignored *)
{ 6  }
(* Const before type ignored *)
{ 7  }
(* Const before type ignored *)
{ 8  }
{$if !defined(_WIN32) && !defined(MAC_OSX_TCL) /* UNIX */}
{ 9  }
{$endif}
{ UNIX  }
{$if defined(_WIN32) /* WIN */}
{$endif}
{ WIN  }
{$ifdef MAC_OSX_TCL /* MACOSX */}
{ 9  }
{$endif}
{ MACOSX  }
{$if !defined(_WIN32) && !defined(MAC_OSX_TCL) /* UNIX */}
{ 10  }
{$endif}
{ UNIX  }
{$if defined(_WIN32) /* WIN */}
{$endif}
{ WIN  }
{$ifdef MAC_OSX_TCL /* MACOSX */}
{ 10  }
{$endif}
{ MACOSX  }
(* Const before type ignored *)
{ 11  }
{ 12  }
(* Const before type ignored *)
{ 13  }
{ 14  }
{ 15  }
(* Const before type ignored *)
{ 16  }
(* Const before declarator ignored *)
{ 17  }
(* Const before type ignored *)
{ 18  }
(* Const before type ignored *)
{ 19  }
(* Const before type ignored *)
{ 20  }
(* Const before type ignored *)
{ 21  }
(* Const before type ignored *)
{ 22  }
(* Const before type ignored *)
(* Const before type ignored *)
{ 23  }
(* Const before type ignored *)
{ 24  }
(* Const before declarator ignored *)
(* Const before type ignored *)
{ 25  }
(* Const before type ignored *)
{ 26  }
(* Const before type ignored *)
{ 27  }
(* Const before type ignored *)
(* Const before type ignored *)
{ 28  }
{ 29  }
{ 30  }
(* Const before type ignored *)
{ 31  }
{ 32  }
{ 33  }
